Continued to work on converting google docs to docbook, finally got google appenging working properly

--- a/styles/src/main/resources/css/css/hibernate.css
+++ b/styles/src/main/resources/css/css/hibernate.css
@@ -25,6 +25,10 @@ pre.XHTML {
     line-height: 1.29em;
 }
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+body {
+	background-color: white;
+}
+
 .article p, .article ul, .article ol, .article pre, .article blockquote, .article .mediaobject, .article .sidebar {
 	margin-left: 10%;
 	margin-right: 10%;
